plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'checkstyle'
}

group = 'com.CurrencyExchangeRatesProviderService'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	gradlePluginPortal()
}

checkstyle {
	toolVersion = '10.21.1'
	configFile = file('google_checks.xml')
}

dependencyManagement {
	imports {
		mavenBom 'org.springframework.boot:spring-boot-dependencies:3.4.1'
	}
}

configurations {
	mockitoAgent
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web:3.4.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.1'
	implementation 'org.liquibase:liquibase-core:4.24.0'
	implementation 'org.postgresql:postgresql:42.7.4'
	compileOnly 'org.projectlombok:lombok:1.18.36'
	annotationProcessor 'org.projectlombok:lombok:1.18.36'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.1'
	testImplementation 'org.junit.platform:junit-platform-launcher:1.11.4'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
	testImplementation 'org.apache.commons:commons-compress:1.26.0'
	testImplementation 'org.testcontainers:postgresql:1.20.4'
	mockitoAgent('org.mockito:mockito-core') {
		transitive = false
	}
}

tasks.test {
	useJUnitPlatform()
	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
}
